<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_habits"
            android:icon="@drawable/ic_habits"
            android:title="@string/nav_habits" />

        <item
            android:id="@+id/nav_hydration"
            android:icon="@drawable/ic_water_drop"
            android:title="@string/nav_hydration" />

        <item
            android:id="@+id/nav_mood"
            android:icon="@drawable/ic_mood"
            android:title="@string/nav_mood" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats"
            android:title="Statistics" />

        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_achievement"
            android:title="Achievements" />

        <item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_template"
            android:title="Templates" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="About" />
        </menu>
    </item>

</menu>
